# OpenPaw

./: .coverage-baseline.json  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5431.XYcywH9x.HJY70tB0XU1h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5434.XFOtTK0x.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5437.XjGXdr1x.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5440.XnlcvVTx.HlkimZoGB30h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5442.XNGk2nrx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5445.XdH7x4Ox.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5448.XPszOIcx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5451.XqEsoHzx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5454.XqacAoKx.HJY70tB0XU1h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5457.Xur1wPIx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5459.XeivhFXx.HC5dKlSSKFKh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5462.Xr1Dt73x.HlkimZoGB30h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5465.XQEb1NPx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5468.XPKFN6Nx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5471.XuNq3Exx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5474.XcPpV9Wx.HW3PiLlFGd5h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5476.XdXe3gux.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5479.X6CsHZvx.H6SzpfA3uFTh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5482.XxpU68bx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5484.XyKMU7wx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5487.Xx0omqnx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5489.XWIRPtFx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5492.XHG0hI9x.HlkimZoGB30h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5495.Xxm3tTdx.HlkimZoGB30h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5498.X3Zo9Fpx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5500.XqYfKOTx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5503.Xwx9IKux.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5506.XvjCHINx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5509.XMI4lPbx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5512.X1gRmyTx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5514.X6wCPpGx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5518.Xp7MdiIx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5520.X0Fow3Wx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5523.XEmsYqNx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5526.XYhrqxtx.HNqO0E9S2Cph  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5615.X5I5xO3x.HJY70tB0XU1h  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5618.XvrGysNx.HOEHbO009HHh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5621.Xbwc3tNx.Hrp3e2HRlCgh  .coverage.runtime-lnmmdqunaxwakxkc-7cdf7bf8f8-fqrtf.pid5624.XRo940Ox.HlkimZoGB30h  (+36 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  release.yml
docs/: CAMPFIRE_SETUP.md  DESIGN.md  GMAIL_SETUP.md  IMESSAGE_SETUP.md  SLACK_SETUP.md  WEBHOOK_BRIDGE.md
docs/design/: DISTRIBUTED_AGENTS.md
scripts/: check_coverage.py  check_function_length.py  quality_report.py  setup-campfire-openpaw.sh  setup_campfire_openpaw.py
src/openpaws/: __init__.py  __main__.py  agent_server_manager.py  cli.py  config.py  daemon.py  queue_manager.py  runner.py  scheduler.py  storage.py  terminal.py
src/openpaws/channels/: __init__.py  base.py  campfire.py  campfire_setup.py  gmail.py  imessage.py  slack.py
src/openpaws/tools/: __init__.py  channel_poster.py  queue_next.py  send_status.py
tests/: conftest.py  test_agent_server_manager.py  test_campfire_adapter.py  test_campfire_setup.py  test_channel_poster.py  test_cli.py  test_config.py  test_daemon.py  test_daemon_integration.py  test_deliberately_broken.py  test_gmail_adapter.py  test_imessage_adapter.py  test_queue_manager.py  test_queue_next_tool.py  test_runner.py  test_scheduler.py  test_send_status.py  test_slack_adapter.py  test_storage.py  test_terminal.py
