[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpaws"
version = "0.1.0"
description = "A lightweight, always-on AI assistant with scheduled tasks and chat connectors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "OpenHands", email = "contact@all-hands.dev" }
]
keywords = ["ai", "agent", "assistant", "scheduler", "telegram", "slack", "gmail"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openhands-sdk>=1.0.0",
    "openhands-tools>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=20.0",
    "slack-bolt>=1.18.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "coverage>=7.0.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
]

[project.scripts]
openpaws = "openpaws.cli:main"

[project.urls]
Homepage = "https://github.com/OpenHands/openpaws"
Documentation = "https://github.com/OpenHands/openpaws/blob/main/docs/DESIGN.md"
Repository = "https://github.com/OpenHands/openpaws"

[tool.hatch.build.targets.wheel]
packages = ["src/openpaws"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "C90",    # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Flag functions with cyclomatic complexity > 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/openpaws"]
sigterm = true

[tool.coverage.paths]
source = [
    "src/openpaws",
    "*/site-packages/openpaws",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
